crates/smart-config/tests/ui/derives/useless_enum.rs
use smart_config::DescribeConfig;

#[derive(DescribeConfig)]
#[config(tag = "version")]
enum TestConfig {
    V0,
    V1,
}

fn main() {}
